--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-aiofiles==0.8.0
-requests==2.25.1
-starlette==0.19.0
+#aiofiles==0.8.0
+#requests==2.25.1
 starlette-exporter==0.12.0
 uvicorn==0.17.6
 jinja2==3.0.3
 urllib3==1.26.9
-boto3==1.24.66
-newscatcherapi==0.7.0
+#boto3==1.24.66
+fastapi==0.101.0
+#newscatcherapi==0.7.0
 python-multipart==0.0.6
